--- a/style.css
+++ b/style.css
@@ -7,9 +7,9 @@
 
 body {
     font-family: 'Tilt Neon', sans-serif;
-    background-image: url(https://resources.pulse.icc-cricket.com/ICC/photo/2023/04/02/7f9cc289-6e33-4aa2-9221-062e8208e172/india-2023-logo.PNG);
+    background-image: url(https://cdn.magicdecor.in/com/2023/10/09152324/Cricket-Stadium-Wallpaper-for-Wall.jpg);
     background-size: cover;
-    background-repeat: no-repeat;
+    /* background-repeat: no-repeat; */
     background-color: #310072;
 }
 
